--- a/K-Means.ipynb
+++ b/K-Means.ipynb
@@ -412,81 +412,107 @@
    "id": "7e16de88-73d0-4bfe-ac60-cba9048b05f1",
    "metadata": {},
    "source": [
-    "# Analyse des Segments de Clients du Mall Customer Segmentation Data\n",
+    "# Customer Segmentation Analysis – Mall Customer Segmentation Data\n",
     "\n",
     "## Introduction\n",
-    "L'objectif de cette analyse est de segmenter les clients d'un centre commercial en fonction de leurs revenus et de leurs comportements d'achat. Nous avons identifié cinq clusters distincts après l'application de l'algorithme de clustering K-Means. Voici une analyse détaillée de chaque segment et des recommandations stratégiques associées.\n",
+    "The goal of this analysis is to segment shopping mall customers based on their income and purchasing behavior.  \n",
+    "We identified five distinct clusters after applying the **K-Means clustering algorithm**.  \n",
+    "Below is a detailed analysis of each segment and the associated strategic recommendations.\n",
     "\n",
-    "## Cluster 1: Earning High but Spending Less (Couleur orange)\n",
+    "---\n",
     "\n",
-    "### Caractéristiques\n",
-    "Les clients de ce cluster ont des revenus élevés mais un faible score de dépenses.\n",
+    "## Cluster 1: Earning High but Spending Less (Orange)\n",
     "\n",
-    "### Analyse\n",
-    "Ces clients peuvent être plus prudents dans leurs achats, préférant des produits de haute qualité mais limitant leurs dépenses. Ils peuvent aussi être plus sélectifs dans leurs choix, n'achetant que des produits qui correspondent à leurs besoins spécifiques.\n",
+    "### Characteristics\n",
+    "- High income  \n",
+    "- Low spending score  \n",
     "\n",
-    "### Stratégie Recommandée\n",
-    "- Proposer des **produits haut de gamme** ou **luxe** pour répondre aux besoins de ce groupe.\n",
-    "- Offrir des **services personnalisés** ou des expériences qui ajoutent de la valeur.\n",
-    "- Utiliser des **programmes de fidélité** pour encourager des achats plus fréquents.\n",
+    "### Analysis\n",
+    "These customers may be more cautious in their purchases, preferring high-quality products but limiting overall spending.  \n",
+    "They are likely more selective, buying only products that match their specific needs.\n",
     "\n",
-    "## Cluster 2: Average in Terms of Earning and Spending (Couleur rouge)\n",
+    "### Recommended Strategy\n",
+    "- Offer **premium or luxury products**  \n",
+    "- Provide **personalized services** or value-added experiences  \n",
+    "- Use **loyalty programs** to encourage more frequent purchases  \n",
     "\n",
-    "### Caractéristiques\n",
-    "Les clients de ce cluster ont des revenus moyens et des comportements d'achat relativement modérés.\n",
+    "---\n",
     "\n",
-    "### Analyse\n",
-    "Ce groupe représente une large portion de la clientèle. Les clients sont modérés dans leurs achats, cherchant des produits de qualité à prix abordable. Ils sont sensibles aux promotions et aux offres spéciales.\n",
+    "## Cluster 2: Average in Terms of Earning and Spending (Red)\n",
     "\n",
-    "### Stratégie Recommandée\n",
-    "- Proposer des **offres groupées** ou des **réductions** pour encourager des achats plus importants.\n",
-    "- Créer des **programmes de fidélité** pour inciter à l'achat récurrent.\n",
-    "- Offrir des **promotions ciblées** sur les produits populaires.\n",
+    "### Characteristics\n",
+    "- Average income  \n",
+    "- Moderate purchasing behavior  \n",
     "\n",
-    "## Cluster 3: Earning High and Spending High (Couleur verte) [Target Set]\n",
+    "### Analysis\n",
+    "This group represents a large portion of the customer base.  \n",
+    "They are moderate spenders, looking for quality products at affordable prices.  \n",
+    "They are sensitive to promotions and special offers.\n",
     "\n",
-    "### Caractéristiques\n",
-    "Les clients de ce cluster ont à la fois des revenus élevés et un score de dépenses élevé, ce qui les rend très rentables.\n",
+    "### Recommended Strategy\n",
+    "- Provide **bundle deals** or **discounts**  \n",
+    "- Create **loyalty programs** to drive repeat buying  \n",
+    "- Offer **targeted promotions** on popular products  \n",
     "\n",
-    "### Analyse\n",
-    "Ce groupe est constitué des clients les plus rentables et les plus engagés. Ils recherchent des produits premium et des services exclusifs. C'est le groupe cible idéal pour les stratégies de marketing.\n",
+    "---\n",
     "\n",
-    "### Stratégie Recommandée\n",
-    "- Offrir des **produits exclusifs** et **haut de gamme**.\n",
-    "- Créer des **expériences sur mesure**, telles que des services VIP.\n",
-    "- Cibler les **campagnes publicitaires** spécifiquement pour ce groupe.\n",
-    "- Encourager les **achats répétés** avec des remises personnalisées.\n",
+    "## Cluster 3: Earning High and Spending High (Green) **[Target Set]**\n",
     "\n",
-    "## Cluster 4: Earning Less but Spending More (Couleur bleue)\n",
+    "### Characteristics\n",
+    "- High income  \n",
+    "- High spending score  \n",
     "\n",
-    "### Caractéristiques\n",
-    "Ces clients ont des revenus plus faibles mais un score de dépenses relativement élevé.\n",
+    "### Analysis\n",
+    "This group consists of the most profitable and engaged customers.  \n",
+    "They seek premium products and exclusive services.  \n",
+    "This is the **ideal target group** for marketing strategies.\n",
     "\n",
-    "### Analyse\n",
-    "Les clients de ce groupe ont un comportement d'achat intéressant. Bien qu'ils aient des revenus plus faibles, ils dépensent de manière régulière. Cela peut indiquer une préférence pour des achats fréquents mais à faible coût.\n",
+    "### Recommended Strategy\n",
+    "- Provide **exclusive and premium products**  \n",
+    "- Create **tailor-made experiences** (VIP services, concierge, etc.)  \n",
+    "- Focus **advertising campaigns** specifically on this group  \n",
+    "- Encourage **repeat purchases** with personalized discounts  \n",
     "\n",
-    "### Stratégie Recommandée\n",
-    "- Proposer des **produits à faible coût** mais attractifs.\n",
-    "- Offrir des **réductions fréquentes** pour attirer ce groupe.\n",
-    "- Créer des **packs de produits** ou des offres combinées pour offrir plus de valeur.\n",
-    "- Développer des **programmes de fidélité** pour encourager des achats réguliers.\n",
+    "---\n",
     "\n",
-    "## Cluster 5: Earning Less, Spending Less (Couleur rose)\n",
+    "## Cluster 4: Earning Less but Spending More (Blue)\n",
     "\n",
-    "### Caractéristiques\n",
-    "Les clients de ce cluster ont à la fois des revenus faibles et un faible score de dépenses.\n",
+    "### Characteristics\n",
+    "- Low income  \n",
+    "- High spending score  \n",
     "\n",
-    "### Analyse\n",
-    "Ce groupe peut être constitué de clients sensibles au prix, qui privilégient les produits à bas prix et recherchent constamment des offres spéciales.\n",
+    "### Analysis\n",
+    "Despite their lower income, they spend regularly.  \n",
+    "This may indicate a preference for frequent purchases at lower cost.\n",
     "\n",
-    "### Stratégie Recommandée\n",
-    "- Offrir des **produits bon marché** ou des **promotions sur des articles essentiels**.\n",
-    "- Créer des **offres limitées** ou des **soldes** pour attirer ce groupe.\n",
-    "- Mettre en place des **programmes de fidélité** qui récompensent les achats réguliers.\n",
-    "- Proposer des **options de financement** pour rendre les achats plus accessibles.\n",
+    "### Recommended Strategy\n",
+    "- Offer **affordable but attractive products**  \n",
+    "- Provide **frequent discounts**  \n",
+    "- Create **product bundles** or combined offers  \n",
+    "- Develop **loyalty programs** to encourage regular purchases  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Cluster 5: Earning Less, Spending Less (Pink)\n",
+    "\n",
+    "### Characteristics\n",
+    "- Low income  \n",
+    "- Low spending score  \n",
+    "\n",
+    "### Analysis\n",
+    "This group is highly **price-sensitive**, prioritizing low-cost products and constantly searching for deals.\n",
+    "\n",
+    "### Recommended Strategy\n",
+    "- Offer **low-priced products** or **promotions on essentials**  \n",
+    "- Create **limited-time offers** or **sales**  \n",
+    "- Set up **loyalty programs** that reward frequent purchases  \n",
+    "- Provide **financing options** to make purchases more accessible  \n",
+    "\n",
+    "---\n",
     "\n",
     "## Conclusion\n",
-    "Cette segmentation permet de mieux comprendre les comportements d'achat des clients et d'adopter des stratégies marketing adaptées à chaque groupe. Les actions proposées permettront de maximiser la rentabilité et la fidélisation des clients en fonction de leurs caractéristiques spécifiques.\n"
+    "This segmentation provides better insight into customer purchasing behavior and helps adopt marketing strategies tailored to each group.  \n",
+    "The proposed actions will help maximize **profitability** and **customer retention** by leveraging the specific characteristics of each cluster.\n"
    ]
   },
   {
@@ -500,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
